--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* STYLE SECTIONING TAGS */
 * { /* Reset the space of the webpage */
-   margin: 0px;
-   padding: 0px;
+   margin: 0;
+   padding: 0;
 }
 
 body {
- background-color: black ; 
+ background-color:black ; 
 }
 
 /* STYLE TEXT */
@@ -15,8 +15,8 @@ h1 {
   text-align: center;
   color: #F15152 ;
   line-height: 60px;
-  letter-spacing: 12px;
-  margin-top: 3%;
+  letter-spacing: 12;
+  margin-top: 3;
   margin-bottom: 3%;
   
 }
